# grasp-next

./: .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  README.md  commit_changes.sh  eslint.config.mjs  justfile  openapi.json  package.json  patch_sources.py  pnpm-lock.yaml  run  skills-lock.json  test-stitch.js  test_sort.py  tsconfig.json  turbo.json  vitest.config.ts
services/evidence-kb/: .env.example  README.md  check_ingestion.py  check_passages.py  check_sources.py  check_vectors.py  export_openapi.py  get_project.py  print_env.py  print_env2.py  pyproject.toml  run  test_batch_embed.py  test_chonkie.py  test_chonkie2.py  test_chonkie3.py  test_db_insert.py  test_embed.py  test_ingest.py  test_pymupdf4llm.py  test_sources.py
services/evidence-kb/alembic/: env.py
services/evidence-kb/alembic/versions/: 70678a229903_add_topic_and_topicpassage.py  afc4c39caf08_add_embedding_to_kb_topics.py  d27d68fbf98c_initial_schema.py  f8bf0a244010_install_oban.py
services/evidence-kb/app/: contracts.py  main.py  middleware.py  models.py  oban_ext.py  settings.py  workers.py
services/evidence-kb/app/actions/: clustering_action.py  curation_action.py  health_action.py  ingest_action.py  passages_action.py  retrieve_action.py  sources_action.py  topics_action.py
services/evidence-kb/app/api/: auth.py  curation.py  health.py  ingest.py  passages.py  retrieve.py  sources.py  topics.py
services/evidence-kb/app/chunking/: chonkie_adapter.py  recursive.py
services/evidence-kb/app/embedding/: client.py
services/evidence-kb/app/parsing/: parser.py
services/evidence-kb/app/quality/: chunk_checks.py
services/evidence-kb/app/retrieval/: hybrid.py
services/evidence-kb/app/storage/: db.py  deps.py  models.py  s3_client.py  sql_repository.py
services/evidence-kb/docs/: README.md  reference.md
services/evidence-kb/tests/: test_chunking.py  test_retrieval.py  test_workers.py
services/evidence-kb/tests/integration/: conftest.py  test_pg_api.py  test_pgvector_and_alembic.py
services/gliner-sidecar/: integration_test.py  main.py  pyproject.toml
services/lazy-graph-rag/: README.md  alembic.ini  main.py  pyproject.toml  run_evals.sh
services/lazy-graph-rag/app/: main.py  settings.py
services/lazy-graph-rag/app/api/: auth.py  chunks.py  collections.py  graph.py  health.py  query.py  search.py  sources.py
services/lazy-graph-rag/app/chunking/: contracts.py  factory.py  recursive.py
services/lazy-graph-rag/app/embedding/: contracts.py  factory.py  llama_cpp.py  openai_compatible.py
services/lazy-graph-rag/app/extraction/: contracts.py  factory.py  gliner_extractor.py  http_adapter.py  nounphrase_extractor.py  pipeline.py
services/lazy-graph-rag/scripts/: smoke_lgs_db.py
services/lazy-graph-rag/tests/: test_api.py  test_chunker.py  test_embedding.py  test_extraction.py  test_graph.py  test_graph_builders.py  test_indexing.py  test_lazy_search.py  test_nounphrase_extractor.py  test_parity_api.py  test_parsing.py  test_runtime_factories.py  test_search.py  test_search_run.py
(+361 files in other folders)
