[project]
name = "evidence-kb"
version = "0.1.0"
description = "Evidence-centric knowledgebase ingestion and retrieval service"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pgvector>=0.3.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "psycopg2-binary>=2.9.0",
    "pymupdf>=1.27.0",
    "pytest>=8.3.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.35",
    "uvicorn>=0.30.0",
    "chonkie[semantic]>=1.6.8",
    "aioboto3>=15.5.0",
    "pymupdf4llm>=1.27.2.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# Unit tests only by default: `pytest`
# Integration tests require explicit path: `pytest tests/integration/ -v`
addopts = "--ignore=tests/integration"

[tool.ruff]
line-length = 120
target-version = "py312"
