[project]
name = "grasp-gliner-sidecar"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "gliner",
  "pydantic",
  "torch==2.12.0+cpu",
  "transformers",
  "uvicorn",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv]
package = false
