[project]
name = "lazy-graph-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "gliner>=0.2.26",
    "httpx>=0.28.1",
    "llama-cpp-python>=0.3.28",
    "pgvector>=0.4.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "pytest>=9.0.3",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
